@@ -76,8 +76,5 @@ define( function( require ) {
     }
   }
 
-  inherit( Node, ToggleButton );
-
-  return ToggleButton;
-
+  return inherit( Node, ToggleButton );
 } );
