@@ -1,3 +1,4 @@
+12/18/13 use 'return inherit(....)' consistently
 12/17/13 Custom: move zoom buttons to bottom of graph, near the control that makes them visible/invisible
 12/17/13 Solutions: fix layout problems that were introduced by changes to Basics
 12/17/13 Custom: fix layout problems that were introduced by changes to Basics
